--- a/src/main/resources/Queries/groupQueries.properties
+++ b/src/main/resources/Queries/groupQueries.properties
@@ -1,4 +1,4 @@
-addGroup = INSERT INTO groups (name,scheduleId) VALUES(?,?)
+addGroup = INSERT INTO groups(name,scheduleId,cathedraId) VALUES(?,?,?)
 findGroupById = SELECT * FROM groups WHERE id=?
 findAllGroups = SELECT * FROM groups
 removeGroupById = DELETE FROM GROUPS WHERE id=? 
