--- a/src/main/resources/Queries/subjectQueries.properties
+++ b/src/main/resources/Queries/subjectQueries.properties
@@ -1,4 +1,4 @@
-addSubject=INSERT INTO subjects(name, description) VALUES(?,?)
+addSubject=INSERT INTO subjects(name, description, teacherId) VALUES(?,?,?)
 findSubjectById= SELECT * FROM  subjects WHERE id=?
 findAllSubjects= SELECT * FROM subjects
 removeSubjectById=DELETE FROM subjects WHERE id=?
