--- a/src/main/resources/Queries/itemQueries.properties
+++ b/src/main/resources/Queries/itemQueries.properties
@@ -1,4 +1,4 @@
-addItem = INSERT INTO items(date, duration,subjectId, audienceId) VALUES(?,?,?,?)
+addItem = INSERT INTO items(date, duration,subjectId, audienceId, scheduleId) VALUES(?,?,?,?,?)
 findItemById = SELECT * FROM items WHERE id=?
 findAllItems=SELECT * FROM items
 removeItemsById = DELETE FROM items WHERE id=?
