--- a/src/main/resources/Queries/teacherQueries.properties
+++ b/src/main/resources/Queries/teacherQueries.properties
@@ -1,5 +1,7 @@
 addTeacher=INSERT INTO teachers(firstName, lastNAme, sex, age, degree, scheduleId) VALUES(?,?,?,?,?,?)
-removeTeacherById= DELETE FROM teachers WHERE id=?
+removeTeacherById=DELETE FROM teachers WHERE id=?
 findTeacherById=SELECT * FROM teachers WHERE id=?
 findAllTeacher=SELECT * FROM teachers
 findAllTeachersWithEqualDegree=SELECT COUNT(*) FROM teachers where degree=?
+removeSchedule=UPDATE teachers SET scheduleId=1 WHERE id=?
+assignSchedule=UPDATE teachers SET scheduleId=? WHERE id=?
