--- a/pom.xml
+++ b/pom.xml
@@ -101,5 +101,11 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.8.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
