--- a/src/main/resources/Queries/studentQueries.properties
+++ b/src/main/resources/Queries/studentQueries.properties
@@ -1,4 +1,8 @@
-addStudent=INSERT INTO students(firstName, lastName ,sex, age, course) VALUES(?,?,?,?,?)
+addStudent=INSERT INTO students(firstName, lastName, sex, age, groupId, course) VALUES(?,?,?,?,?,?)
 findStudentById=SELECT * FROM students WHERE id=?
 findAllStudents=SELECT * FROM students
 removeStudentById=DELETE FROM students WHERE id=?
+assignGroup=UPDATE students SET groupId=? WHERE id=?
+removeFromGroup=UPDATE students SET groupId=1 WHERE id=?
+assignCourse=UPDATE students SET course=? WHERE id=?
+removeFromCourse=UPDATE students SET course=0 WHERE id=?
