--- a/src/main/resources/Queries/scheduleQueries.properties
+++ b/src/main/resources/Queries/scheduleQueries.properties
@@ -1,4 +1,4 @@
 addSchedule=INSERT INTO schedules(name) VALUES(?)
-findScheduleByID=SELECT * FROM schedules WHERE id=?
-findAllSchedules=SELECT * FROM schedules
+findScheduleByID=Select * from schedules where id=?
+findAllSchedules=Select * from schedules
 removeScheduleById=DELETE FROM schedules where id=?
