--- a/src/main/resources/PosdgreSQL.properties
+++ b/src/main/resources/PosdgreSQL.properties
@@ -1,4 +1,4 @@
 driverClassName=org.postgresql.Driver
 url=jdbc:postgresql://localhost/University
 username=postgres
-password=cub66901251
+password=
