Full CRUD pages created

--- a/src/main/resources/Queries/cathedraQueries.properties
+++ b/src/main/resources/Queries/cathedraQueries.properties
@@ -1,4 +1,4 @@
-addCathedra=INSERT INTO Cathedra(name) VALUES (?)
-removeCathedra = DELETE FROM Cathedra WHERE id=?
+addCathedra=INSERT INTO Cathedra(name, facultyId) VALUES (?,?)
+removeCathedra=DELETE FROM Cathedra WHERE id=?
 findCathedraByID=SELECT * FROM Cathedra WHERE id=?
 findAll=SElECT * FROM Cathedra
