--- a/src/main/resources/Queries/audienceQueries.properties
+++ b/src/main/resources/Queries/audienceQueries.properties
@@ -1,4 +1,1 @@
-addAudience=INSERT INTO Audience(number) VALUES (?)
-findAudienceById=SELECT * FROM Audience WHERE id=?
-findAllAudience=SELECT * FROM Audience
-removeAudience=DELETE FROM Audience where id=?
+findAllAudience=SELECT a FROM Audience a
