--- a/src/main/resources/Queries/groupQueries.properties
+++ b/src/main/resources/Queries/groupQueries.properties
@@ -1,5 +1,2 @@
-addGroup = INSERT INTO groups(name,scheduleId,cathedraId) VALUES(?,?,?)
-findGroupById = SELECT * FROM groups WHERE id=?
-findAllGroups = SELECT * FROM groups
-removeGroupById = DELETE FROM GROUPS WHERE id=? 
-findAllGroupsRelatedToCathedra=SELECT * FROM groups WHERE cathedraId=?
+findAllGroups=SELECT g FROM Group g
+findAllGroupsRelatedToCathedra=SELECT g FROM Group g WHERE g.cathedra.id= :id
