--- a/src/main/resources/Queries/itemQueries.properties
+++ b/src/main/resources/Queries/itemQueries.properties
@@ -1,4 +1,1 @@
-addItem=INSERT INTO items(day,hour, duration,subjectId, audienceId, scheduleId) VALUES(?,?,?,?,?,?)
-findItemById=SELECT * FROM items WHERE id=?
-findAllItems=SELECT * FROM items
-removeItemsById=DELETE FROM items WHERE id=?
+findAllItems=SELECT i from Item i
