--- a/src/main/resources/Queries/scheduleQueries.properties
+++ b/src/main/resources/Queries/scheduleQueries.properties
@@ -1,4 +1,1 @@
-addSchedule=INSERT INTO schedules(name) VALUES(?)
-findScheduleByID=Select * from schedules where id=?
-findAllSchedules=Select * from schedules
-removeScheduleById=DELETE FROM schedules where id=?
+findAllSchedules=SELECT s FROM Schedule s
