--- a/src/main/resources/Queries/subjectQueries.properties
+++ b/src/main/resources/Queries/subjectQueries.properties
@@ -1,7 +1,2 @@
-addSubject=INSERT INTO subjects(name, description, teacherId) VALUES(?,?,?)
-findSubjectById=SELECT * FROM  subjects WHERE id=?
-findAllSubjects=SELECT * FROM subjects
-removeSubjectById=DELETE FROM subjects WHERE id=?
-findAllSubjectRelatedToAudience=SELECT subjects.id, subjects.name,subjects.description,subjects.teacherId FROM subjects JOIN items on subjects.id=items.subjectId and items.audienceId=(SELECT id FROM audience WHERE id=?)
-assignTeacher= UPDATE subjects SET teacherId=? WHERE id=?
-removeTeacher = UPDATE subjects SET teacherId=1 WHERE id=?
+findAllSubjects=SELECT s FROM Subject s
+findAllSubjectRelatedToAudience=SELECT s FROM Subject s JOIN Item i ON s.id=i.subject.id and i.audience.id=(SELECT a.id FROM Audience a WHERE a.id=:id)
