--- a/src/main/resources/Queries/facultyQueries.properties
+++ b/src/main/resources/Queries/facultyQueries.properties
@@ -1,4 +1,1 @@
-addFaculty = INSERT INTO faculty(name) VALUES(?);
-findFacultyById = SELECT * FROM faculty WHERE id=?
-findAllFaculties = SELECT * FROM faculty
-removeFacultyById = DELETE FROM faculty WHERE id=?
+findAllFaculties=SELECT f from Faculty f
