--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.error.whitelabel.enabled=false
 spring.mvc.hiddenmethod.filter.enabled=true
+springfox.documentation.swagger-ui.base-url=/university-api
